--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
         </div>
       </div>
     </div>
+    <div id="source-code-part">
+      <a href="https://github.com/rila84/weatherApp" id="source-code"
+        >open-source code</a
+      ><span id="source-code-span">, by raheleh fotouhi</span>
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
